develop layout & styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,24 +6,22 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <h1>Fadable Calendar PoC</h1>
-  <p>Status: <span id="status">Lade...</span></p>
   <div id="calendar-container">
     <div id="week-2026-01">
       <div class="week-header">
         <div class="week-header-labels">
-          <span class="week-label-year">2026</span>
-          <span class="week-label-month">January</span>
-          <span class="week-label-separator">|</span>
-          <span class="week-label-weeknum">Week 01</span>
+          <span class="week-label week-label-year">2026</span>
+          <span class="week-label week-label-month">January</span>
+          <span class="week-label week-label-separator">|</span>
+          <span class="week-label week-label-weeknum">Week 01</span>
         </div>
-        <div class="week-header-badges">
-          <span class="week-badge-event-density">Event density: medium</span>
-          <span class="week-badge-holidays">1 Holiday this week</span>
-          <span class="week-badge-exceptions">2 Exceptions in series this week</span>
+        <div class="week-header-widgets">
+          <span class="week-widget week-widget-event-density">Event density: medium</span>
+          <span class="week-widget week-widget-holidays">1 Holiday this week</span>
+          <span class="week-widget week-widget-exceptions">2 Exceptions in series this week</span>
         </div>
       </div>
-      <div>
+      <div class="week-days">
         <div id="day-2026-01-05" class="day-passed">
           <div class="day-header">
             <span class="day-header-date">05</span>
