basic calendar view works (no events yet)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,91 +7,17 @@
 </head>
 <body>
   <div id="calendar-container">
-    <div id="week-2026-01">
-      <div class="week-header">
-        <div class="week-header-labels">
-          <span class="week-label week-label-year">2026</span>
-          <span class="week-label week-label-month">January</span>
-          <span class="week-label week-label-separator">|</span>
-          <span class="week-label week-label-weeknum">Week 01</span>
-        </div>
-        <div class="week-header-widgets">
-          <span class="week-widget week-widget-event-density">Event density: medium</span>
-          <span class="week-widget week-widget-holidays">1 Holiday this week</span>
-          <span class="week-widget week-widget-exceptions">2 Exceptions in series this week</span>
-        </div>
-      </div>
-      <div class="week-days">
-        <div id="day-2026-01-05" class="day-passed">
-          <div class="day-header">
-            <span class="day-header-date">05</span>
-            <span class="day-header-dayname">Mo</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-        <div id="day-2026-01-06" class="day-passed">
-          <div class="day-header">
-            <span class="day-header-date">06</span>
-            <span class="day-header-dayname">Di</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-        <div id="day-2026-01-07" class="day-today">
-          <div class="day-header">
-            <span class="day-header-date">07</span>
-            <span class="day-header-dayname">Mi</span>
-          </div>
-          <div class="day-strip">
-            
-          </div>
-        </div>
-        <div id="day-2026-01-08" class="day-future">
-          <div class="day-header">
-            <span class="day-header-date">08</span>
-            <span class="day-header-dayname">Do</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-        <div id="day-2026-01-09" class="day-future">
-          <div class="day-header">
-            <span class="day-header-date">09</span>
-            <span class="day-header-dayname">Fr</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-        <div id="day-2026-01-10" class="day-future">
-          <div class="day-header">
-            <span class="day-header-date">10</span>
-            <span class="day-header-dayname">Sa</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-        <div id="day-2026-01-11" class="day-future">
-          <div class="day-header">
-            <span class="day-header-date">11</span>
-            <span class="day-header-dayname">So</span>
-          </div>
-          <div class="day-strip">
-
-          </div>
-        </div>
-      </div>
+    <div id="calendar-scrollview">
+      <div id="scroll-buffer-top" class="scroll-buffer"></div>
+      <div id="weeks-container"></div>
+      <div id="scroll-buffer-bottom" class="scroll-buffer"></div>
     </div>
   </div>
 
   <!-- SCRIPTS -->
   <script src="/app.js"></script>
   <script>
+    // Register service worker for PWA functionality
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js');
     }
