draw events at the right positions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <div id="calendar-container">
     <div id="calendar-scrollview">
       <div id="scroll-buffer-top" class="scroll-buffer"></div>
-      <div id="weeks-container"></div>
+      <div id="main-scroller"></div>
       <div id="scroll-buffer-bottom" class="scroll-buffer"></div>
     </div>
   </div>
