comment out CSS cache busting since it breaks loading placeholders (kept in case of need)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
   <link id="app-styles" rel="stylesheet" href="/styles.css">
 
-  <script>
+  <!-- <script>
     const cssLink = document.getElementById('app-styles');  // Force reload CSS to avoid caching issues (for development)
     if (cssLink) {
       const baseHref = cssLink.getAttribute('href').split('?')[0];
       cssLink.setAttribute('href', `${baseHref}?v=${Date.now()}`);
     }
-  </script>
+  </script> -->
 
 
 </head>
