add scroll-to-this-week button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,10 @@
       <div id="main-scroller"></div>
       <div id="scroll-buffer-bottom" class="scroll-buffer"></div>
     </div>
+
+    <button id="scroll-to-today" class="scroll-to-today" type="button" aria-label="Scroll to this week">
+      This week
+    </button>
   </div>
 
   <!-- SCRIPTS -->
