--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,11 +30,13 @@
     </div>
 
     <button id="scroll-to-today" class="scroll-to-today" type="button" aria-label="Scroll to this week">
-      This week
+      <i class="lucide-icon" data-lucide="calendar" aria-hidden="true"></i>
+      <span>Back to this week</span>
     </button>
   </div>
 
   <!-- SCRIPTS -->
+  <script src="https://unpkg.com/lucide@0.469.0/dist/umd/lucide.min.js"></script>
   <script src="/app.js"></script>
   <script>
     // Register service worker for PWA functionality
